--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Sort Without Articles</title>
 </head>
 <body>
+    <ul id="bands"></ul>
     <script src="js/script.js"></script>
 </body>
 </html>
